--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                    </p>
                </li>
                 <img src="./images/delimiter.png" alt="" class="order__delimiter">
+                <img src="./images/vert_delimiter.png" alt="" class="order__delimiter2">
                 <li class="order__item">
                     <img src="./images/order2.png" alt="" class="order__img">
                     <p class="order__description">
@@ -133,6 +134,7 @@
                     </p>
                 </li>
                 <img src="./images/delimiter2.png" alt="" class="order__delimiter">
+                <img src="./images/vert_delimiter2.png" alt="" class="order__delimiter2">
                 <li class="order__item">
                     <img src="./images/order3.png" alt="" class="order__img">
                     <p class="order__description order__description_light">
