--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
     </header>
     
     
-    <div class="main-banner__area">
         <div class="container main-banner__container">
             <div class="main-banner__services">
                 <div class="services">
@@ -110,13 +109,14 @@
                     </div>
                 </div>            </div>
         </div>
-    </div>
 </section>
 
 <section class="main-content">
     <div class="order">
         <div class="container order__container">
-            <img src="./images/windows.jpg" alt="" class="order__picture">
+            <div class="order__picture">
+                <img src="./images/windows.jpg" alt="">
+            </div>
             <div class="order__steps">
                 <h2 class="order__title">Как сделать заказ?</h2>
                 <ul class="order__list">
@@ -151,7 +151,6 @@
             <div class="video__list">
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/Er3b04ykexg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video1.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -166,7 +165,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video3.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -181,7 +179,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/pINxK7hUkJU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video2.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -196,7 +193,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video3.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -211,7 +207,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/uw-gecBFMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video1.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -226,7 +221,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/Er3b04ykexg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video1.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -241,7 +235,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video3.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -256,7 +249,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/pINxK7hUkJU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video2.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -271,7 +263,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video3.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -286,7 +277,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/uw-gecBFMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video1.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -301,7 +291,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/Er3b04ykexg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video1.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -316,7 +305,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video3.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -331,7 +319,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/pINxK7hUkJU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video2.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -346,7 +333,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video3.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
@@ -361,7 +347,6 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/uw-gecBFMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                         <img src="./images/video1.jpg" alt="" class="video__item-img">
                         <div class="video__item-thumbler"></div>
                     </div>
