--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="video__list">
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video1.jpg" alt="" class="video__item-img">
+                        <img src="./images/video1.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -165,7 +165,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video3.jpg" alt="" class="video__item-img">
+                        <img src="./images/video3.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -179,7 +179,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video2.jpg" alt="" class="video__item-img">
+                        <img src="./images/video2.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -193,7 +193,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video3.jpg" alt="" class="video__item-img">
+                        <img src="./images/video3.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -207,7 +207,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video1.jpg" alt="" class="video__item-img">
+                        <img src="./images/video1.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -221,7 +221,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video1.jpg" alt="" class="video__item-img">
+                        <img src="./images/video1.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -235,7 +235,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video3.jpg" alt="" class="video__item-img">
+                        <img src="./images/video3.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -249,7 +249,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video2.jpg" alt="" class="video__item-img">
+                        <img src="./images/video2.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -263,7 +263,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video3.jpg" alt="" class="video__item-img">
+                        <img src="./images/video3.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -277,7 +277,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video1.jpg" alt="" class="video__item-img">
+                        <img src="./images/video1.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -291,7 +291,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video1.jpg" alt="" class="video__item-img">
+                        <img src="./images/video1.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -305,7 +305,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video3.jpg" alt="" class="video__item-img">
+                        <img src="./images/video3.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -319,7 +319,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video2.jpg" alt="" class="video__item-img">
+                        <img src="./images/video2.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -333,7 +333,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video3.jpg" alt="" class="video__item-img">
+                        <img src="./images/video3.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
@@ -347,7 +347,7 @@
                 </div>
                 <div class="video__item">
                     <div class="video__item-clip">
-                        <img src="./images/video1.jpg" alt="" class="video__item-img">
+                        <img src="./images/video1.jpg" alt="">
                         <div class="video__item-thumbler"></div>
                     </div>
                     <div class="video__item-content">
